--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
       learning technical sophistication, probably more. To join our
       movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
     </p>
+    
+    <p>
+      <a href="https://twitter.com/learnenough" target="_blank"
+      rel="noopener" style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png">
+      </a>
+      You should follow Learn Enough on Twitter
+      <a href="https://twitter.com/learnenough"
+         target="_blank" rel="noopener">here</a>.
+    </p>
 
     <p>
       HTML was created by the original "web developer", computer scientist
@@ -26,6 +36,7 @@
       share pictures of his cat, but it would be cool if it were.
     </p>
 
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
     <img src="images/kitten.jpg" alt="An adorable kitten">
 
     <h2>Background</h2>
