--- a/tags.html
+++ b/tags.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
 
     <h1>Important HTML tags</h1>
 
@@ -62,6 +68,16 @@
           <td>table data</td>
           <td>include a table data cell</td>
         </tr>
+        <tr>
+          <td><code>div</code></td>
+          <td>division</td>
+          <td>include a division</td>
+        </tr>
+        <tr>
+          <td><code>header</code></td>
+          <td>header</td>
+          <td>include a header</td>
+        </tr>
       </table>
 
       <h2>Inline Elements</h2>
@@ -112,6 +128,13 @@
             </td>
             <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"</td>
           </tr>
+          <tr>
+            <td><code>span</code></td>
+            <td>span</td>
+            <td>make span</td>
+            <td><code>&lt;span&gt;&lt;/span&gt;</code></td>
+            <td><span>technical sophistication</span>></td>
+        </tr>
       </table>
 
   </body>
