Finish the sample website

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-    <div>
+    <div id="main-nav" class="nav-menu">
       <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
@@ -27,7 +28,7 @@
     
     <p>
       <a href="https://twitter.com/learnenough" target="_blank"
-      rel="noopener" style="text-decoration: none;">
+      rel="noopener" class="image-link">
         <img src="images/small_twitter_logo.png">
       </a>
       You should follow Learn Enough on Twitter
@@ -43,7 +44,22 @@
     </p>
 
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
-    <img src="images/kitten.jpg" alt="An adorable kitten">
+    <img src="images/kitten.jpg" alt="An adorable kitten"></a>
+
+    <h2>Quotations</h2>
+
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #fafafa;">
+      <p>
+        <em>Don't believe every quote you read on the Internet.</em>
+        <br>
+        —Abraham Lincoln
+      </p>
+    </blockquote>
 
     <h2>Background</h2>
 
@@ -60,7 +76,7 @@
       <a href="https://www.learnenough.com/">learnenough.com</a>.
     </p>
 
-    <h3>Founders</h3>
+    <h3 id="founders">Founders</h3>
 
     <p>
       Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
