--- a/tags.html
+++ b/tags.html
@@ -3,13 +3,14 @@
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
-    <div>
+    <div id="main-nav" class="nav-menu">
       <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -39,7 +40,7 @@
           <th>Purpose</th>
         </tr>
         <tr>
-          <td><code>h1</code>&ndash;<code>h6</code></td>
+          <td style="padding: 10px;"><code>h1</code>&ndash;<code>h6</code></td>
           <td>headings</td>
           <td>include a heading (levels 1&ndash;6)</td>
         </tr>
